# tts_webui_extension.styletts2

./: README.md  pyproject.toml  setup.py
extension_styletts2/: main.py
tts_webui_extension/styletts2/: __init__.py
