[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tts_webui_extension.styletts2"
version = "0.1.0"
description = "StyleTTS2 is a text-to-speech model that generates high-quality speech with controllable style"
authors = [
    {name = "rsxdalv"}
]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "styletts2 @ https://github.com/rsxdalv/StyleTTS2/releases/download/v0.1.8/styletts2-0.1.8-py3-none-any.whl",
]

[project.urls]
Homepage = "https://github.com/rsxdalv/tts_webui_extension.styletts2"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
# This will find all namespace packages automatically
namespaces = true
